@@ -115,6 +115,8 @@ Copyright \copy {{{time(%Y)}}} Mitch Richling. All rights reserved.
       - simone_attractor.cpp
       - demo_data_and_filter.cpp
       - mandelbrot_minOrbit
+      - mandeldragon.cpp 
+      - mandeldragon_orbits.cpp 
     - Updated
       - newton_z6.cpp: Fixed non-const trig functions for MSVC
       - phoenix.cpp, phoenixD.cpp, phoenixI.cpp: Added OpenMP 2.0 support
